--- a/judiblog-old/web/admin/add_edit_user.xhtml
+++ b/judiblog-old/web/admin/add_edit_user.xhtml
@@ -32,63 +32,62 @@
                                             <div class="col-lg-6">
                                                 <div class="form-group">
                                                     <label>User Name:</label>
-                                                    <h:inputText class="form-control" value="" id="username" pt:placeholder="Enter user name"/>
+                                                    <h:inputText class="form-control" value="#{userManager.user.userName}" id="username" pt:placeholder="Enter user name"/>
                                                 </div>
                                                 <div class="form-group">
                                                     <label>Password:</label>
-                                                    <h:inputSecret class="form-control" value="" id="newpass" pt:placeholder="Enter password"/>
+                                                    <h:inputSecret class="form-control" value="#{userManager.user.pwd}" id="newpass" pt:placeholder="Enter password"/>
                                                 </div>
                                                 <div class="form-group">
                                                     <label>Confirm Password:</label>
-                                                    <h:inputSecret class="form-control" value="" id="repass" pt:placeholder="Confirm password"/>
+                                                    <h:inputSecret class="form-control" value="#{userManager.user.pwd}" id="repass" pt:placeholder="Confirm password"/>
                                                 </div>
                                                 <div class="form-group">
                                                     <label>Full Name:</label>
-                                                    <h:inputText class="form-control" value="" id="fullname" pt:placeholder="Enter full name"/>
+                                                    <h:inputText class="form-control" value="#{userManager.user.fullName}" id="fullname" pt:placeholder="Enter full name"/>
                                                 </div>
                                                 <div class="form-group">
                                                     <label>Birthday:</label>
-                                                    <h:inputText class="datetimepicker form-control" value="" id="birthday" pt:placeholder="Enter birthday">
+                                                    <h:inputText class="datetimepicker form-control" value="#{userManager.user.birthday}" id="birthday" pt:placeholder="Enter birthday">
                                                         <f:convertDateTime pattern="dd/MM/yyyy" />
                                                     </h:inputText>
                                                 </div>
                                                 <div class="form-group">
                                                     <label>Gender:</label>
-                                                    <h:selectOneRadio value="#">
-                                                        <f:selectItem itemValue="1" itemLabel="Male" />
-                                                        <f:selectItem itemValue="2" itemLabel="Female" />
+                                                    <h:selectOneRadio value="#{userManager.user.gender}">
+                                                        <f:selectItem itemValue="0" itemLabel="Male"   />
+                                                        <f:selectItem itemValue="1" itemLabel="Female"   />
                                                     </h:selectOneRadio>
                                                 </div>
                                             </div>
                                             <div class="col-lg-6">
                                                 <div class="form-group">
                                                     <label>ID Card:</label>
-                                                    <h:inputText class="form-control" value="" id="idcard" pt:placeholder="Enter ID Card"/>
+                                                    <h:inputText class="form-control" value="#{userManager.user.idCard}" id="idcard" pt:placeholder="Enter ID Card"/>
                                                 </div>
                                                 <div class="form-group">
                                                     <label>Address:</label>
-                                                    <h:inputText class="form-control" value="" id="address" pt:placeholder="Enter address"/>
+                                                    <h:inputText class="form-control" value="#{userManager.user.address}" id="address" pt:placeholder="Enter address"/>
                                                 </div>
                                                 <div class="form-group">
                                                     <label>Email:</label>
-                                                    <h:inputText class="form-control" value="" id="email" pt:placeholder="Enter email address"/>
+                                                    <h:inputText class="form-control" value="#{userManager.user.email}" id="email" pt:placeholder="Enter email address"/>
                                                 </div>
                                                 <div class="form-group">
                                                     <label>Phone:</label>
-                                                    <h:inputText class="form-control" value="" id="phone" pt:placeholder="Enter phone number"/>
+                                                    <h:inputText class="form-control" value="#{userManager.user.phone}" id="phone" pt:placeholder="Enter phone number"/>
                                                 </div>
                                                 <div class="form-group">
                                                     <label>Role:</label>
-                                                    <h:selectOneMenu class="form-control" value="#">
-                                                        <f:selectItem itemValue="1" itemLabel="Administrator" />
-                                                        <f:selectItem itemValue="2" itemLabel="Super Mod" />	
-                                                        <f:selectItem itemValue="3" itemLabel="Mod" />	
-                                                        <f:selectItem itemValue="4" itemLabel="Member" />	   							
+                                                    <h:selectOneMenu class="form-control" value="#{userManager.user.role}">
+                                                        <f:converter converterId="RoleConverter" />
+                                                        <f:selectItems value="#{userManager.getListRole()}" var="role"
+                                                                       itemValue="#{role}" itemLabel="#{role.roleName}" />
                                                     </h:selectOneMenu>
                                                 </div>
                                             </div>
                                             <div class="col-lg-12 text-center">
-                                                <h:commandButton class="btn btn-outline btn-primary" value="Submit"/>
+                                                <h:commandButton class="btn btn-outline btn-primary" value="Submit" action ="#{userManager.adduser()}"/>
                                                 <button type="reset" class="btn btn-outline btn-primary">Reset</button>
                                             </div>
                                         </h:form>
