--- a/trunk/judiblog-old/web/admin/users_manager.xhtml
+++ b/trunk/judiblog-old/web/admin/users_manager.xhtml
@@ -77,7 +77,12 @@
                                                     <f:facet name="header">Status</f:facet>
                                                     <h:outputText value="#{userList.active}" />
                                                 </h:column>
-                                                
+                                                <h:column>
+                                                    <f:facet name="header">Delete</f:facet>
+                                                    <h:commandButton value="Delete" 
+                                                                     action="#{userManager.detete(userList.userID)}"  >                
+                                                    </h:commandButton>
+                                                </h:column>
                                             </h:dataTable>
                                         </h:form>
                                     </f:view>
