--- a/trunk/judiblog-old/web/admin/project-manager.xhtml
+++ b/trunk/judiblog-old/web/admin/project-manager.xhtml
@@ -3,7 +3,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
 
     <body>
 
@@ -20,8 +21,8 @@
                         <div class="panel panel-default">
                             <div class="panel-heading text-center">
                                 <h:form>
-                                    <h:inputText value=""/>&nbsp; &nbsp; 
-                                    <h:commandButton action="#" value="Search" class="btn btn-outline btn-primary"/>
+                                    <h:inputText value="#{projectBean.value}"/>&nbsp; &nbsp; 
+                                    <h:commandButton action="#{projectBean.findProject()}" value="Search" class="btn btn-outline btn-primary"/>
                                 </h:form>
                                 List Project
                             </div>
@@ -33,35 +34,35 @@
                                         <h:dataTable value="#{projectBean.allProject}" var="projectList" class="table table-striped table-bordered table-hover" id="dataTables">
                                             <h:column>
                                                 <f:facet name="header">Project ID</f:facet>
-                                                <h:outputText value="#{projectList.projectID}" />
+                                                <h:commandLink value="#{projectList.projectID}" action="#{projectBean.updateProject(projectList)}" />
                                             </h:column>
                                             <h:column>
                                                 <f:facet name="header">Project name</f:facet>
-                                                <a href=""><h:outputText value="#{projectList.projectName}" /></a>
+                                                <h:outputText value="#{projectList.projectName}" />
                                             </h:column>
                                             <h:column>
                                                 <f:facet name="header">Start Date</f:facet>
-                                                <a href=""><h:outputText value="#{projectList.startDate}" /></a>
+                                                <h:outputText value="#{projectList.startDate}" />
                                             </h:column>
                                             <h:column>
                                                 <f:facet name="header">Duration</f:facet>
-                                                <a href=""><h:outputText value="#{projectList.duration}" /></a>
+                                                <h:outputText value="#{projectList.duration}" />
                                             </h:column>
                                             <h:column>
                                                 <f:facet name="header">Project Type</f:facet>
-                                                <a href=""><h:outputText value="#{projectList.type.typeName}" /></a>
+                                                <h:outputText value="#{projectList.type.typeName}" />
                                             </h:column>
                                             <h:column>
                                                 <f:facet name="header">Description</f:facet>
-                                                <a href=""><h:outputText value="#{projectList.description}" /></a>
+                                                <h:outputText value="#{projectList.description}" />
                                             </h:column>
                                             <h:column>
-                                                <f:facet name="header">Edit</f:facet>
-                                                <a href=""><h:outputText value=""/><img src="/Judi-blog/img/edit.png" alt="edit"/></a>
+                                                <f:facet name="header">Active</f:facet>
+                                                <h:commandLink action="#{projectBean.activeProject(projectList.projectID, !projectList.active)}"  value="#{projectList.active ? 'Disable':'Enable'}"  style="padding-left: 10px"/>
                                             </h:column>
                                             <h:column>
                                                 <f:facet name="header">Delete</f:facet>
-                                                <a href=""><h:outputText value="#{projectBean.deleteProject(projectList.projectID)}" /><img src="/Judi-blog/img/delete.png" alt="delete"/></a>
+                                                <a href=""><h:outputText value="" /><img src="/Judi-blog/img/delete.png" alt="delete"/></a>
                                             </h:column>
                                         </h:dataTable>
                                     </h:form>
@@ -71,8 +72,6 @@
                     </div>
                 </div>
             </ui:define>
-
         </ui:composition>
-
     </body>
 </html>
