--- a/trunk/judiblog-old/web/admin/users_manager.xhtml
+++ b/trunk/judiblog-old/web/admin/users_manager.xhtml
@@ -24,8 +24,8 @@
                         <div class="panel panel-default">
                             <div class="panel-heading text-center">
                                 <h:form>
-                                    <h:inputText value="#{userManager.searchbyUser()}"/>
-                                    <h:commandButton action="#{userManager.search()}" value="Search"/>
+                                    <h:inputText value="#{userManager.search()}"/>
+                                    <h:commandButton action="#{userManager.search}" value="Search"/>
                                 </h:form>
                                 List users
                             </div>
@@ -36,7 +36,7 @@
                                             <h:dataTable value="#{userManager.allUser}" var="userList" class="table table-striped table-bordered table-hover" id="dataTables">
                                                 <h:column>
                                                     <f:facet name="header">User ID</f:facet>
-                                                    <h:outputText value="#{userList.userID}" />
+                                                    <h:commandLink value="#{userList.userID}" action="#{userManager.update1(userList)}" />
                                                 </h:column>   
 
                                                 <h:column>
@@ -78,9 +78,8 @@
                                                     <h:outputText value="#{userList.active}" />
                                                 </h:column>
                                                 <h:column>
-                                                    <f:facet name="header">  Edit-Delete</f:facet>
-                                                    <h:commandButton value="Edit" immediate="true"
-                                                                     actionListener ="#{userManager.edituser()}" action="edit_user" />  -
+                                                    <f:facet name="header">  Edit-Delete </f:facet>
+                                                   
                                                     <h:commandButton value="Delete" 
                                                                      action="#{userManager.detete(userList.userID)}"  />                
                                                 </h:column>
